--- a/lettings/templates/lettings/index.html
+++ b/lettings/templates/lettings/index.html
@@ -1,34 +1,38 @@
 {% extends "base.html" %}
-{% load static %}
-{% block title %}{{ title }}{% endblock title %}
+{% block title %}Lettings{% endblock title %}
 
 {% block content %}
+
 
 <div class="container px-5 py-5 text-center">
     <div class="row justify-content-center">
         <div class="col-lg-8">
-            <h1 class="page-header-ui-title mb-3 display-6">{{ title }}</h1>
+            <h1 class="page-header-ui-title mb-3 display-6">Lettings</h1>
+        </div>
+    </div>
+</div>
+
+<div class="container px-5">
+    <div class="row gx-5 justify-content-center">
+        <div class="col-lg-10">
+            <hr class="mb-0" />
+            {% if lettings_list %}
+                <ul class="list-group list-group-flush list-group-careers">
+                    {% for letting in lettings_list %}
+                        <li class="list-group-item">
+                            <a href="{% url 'lettings:letting' letting_id=letting.id %}">{{ letting.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>No lettings are available.</p>
+            {% endif %}
         </div>
     </div>
 </div>
 
 <div class="container px-5 py-5 text-center">
-	<div class="card">
-	    <div class="card-body">
-	        <div class="icon-stack icon-stack-lg bg-primary text-white mb-3"><i data-feather="home"></i></div>
-	       	<p>{{ address.number }} {{ address.street }}</p>
-			<p>{{ address.city }}, {{ address.state }} {{ address.zip_code }}</p>
-			<p>{{ address.country_iso_code }}</p>
-	    </div>
-	</div>
-</div>
-
-<div class="container px-5 py-5 text-center">
     <div class="justify-content-center">
-        <a class="btn fw-500 ms-lg-4 btn-primary px-10" href="{% url 'lettings:lettings_index' %}">
-        	<i class="ms-2" data-feather="arrow-right"></i>
-            Back
-        </a>
         <a class="btn fw-500 ms-lg-4 btn-primary px-10" href="{% url 'index' %}">
             Home
         </a>
