--- a/profiles/templates/profiles/index.html
+++ b/profiles/templates/profiles/index.html
@@ -1,33 +1,36 @@
 {% extends "base.html" %}
-{% block title %}{{ profile.user.username }}{% endblock title %}
+{% block title %}Profiles{% endblock title %}
 
 {% block content %}
 <div class="container px-5 py-5 text-center">
     <div class="row justify-content-center">
         <div class="col-lg-8">
-            <h1 class="page-header-ui-title mb-3 display-6">{{ profile.user.username }}</h1>
+            <h1 class="page-header-ui-title mb-3 display-6">Profiles</h1>
+        </div>
+    </div>
+</div>
+
+<div class="container px-5">
+    <div class="row gx-5 justify-content-center">
+        <div class="col-lg-10">
+            <hr class="mb-0" />
+            {% if profiles_list %}
+                <ul class="list-group list-group-flush list-group-careers">
+                    {% for profile in profiles_list %}
+                        <li class="list-group-item">
+                            <a href="{% url 'profiles:profile' username=profile.user.username %}">{{ profile.user.username }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>No profiles are available.</p>
+            {% endif %}
         </div>
     </div>
 </div>
 
 <div class="container px-5 py-5 text-center">
-	<div class="card">
-	    <div class="card-body">
-	        <div class="icon-stack icon-stack-lg bg-primary text-white mb-3"><i data-feather="user"></i></div>
-	       	<p><strong>First name :</strong> {{ profile.user.first_name }}</p>
-			<p><strong>Last name :</strong> {{ profile.user.last_name }}</p>
-			<p><strong>Email :</strong> {{ profile.user.email }}</p>
-			<p><strong>Favorite city :</strong> {{ profile.favorite_city }}</p>
-	    </div>
-	</div>
-</div>
-
-<div class="container px-5 py-5 text-center">
     <div class="justify-content-center">
-        <a class="btn fw-500 ms-lg-4 btn-primary px-10" href="{% url 'profiles:profiles_index' %}">
-        	<i class="ms-2" data-feather="arrow-left"></i>
-            Back
-        </a>
         <a class="btn fw-500 ms-lg-4 btn-primary px-10" href="{% url 'index' %}">
             Home
         </a>
